@@ -164,6 +164,19 @@
 				</listitem>
 			</varlistentry>
 			<varlistentry>
+				<term><option>include_dir</option> <replaceable>dir</replaceable></term>
+				<listitem>
+					<para>External configuration files may be included by using
+						the include_dir option. This defines a directory that
+						will be searched for config files. All files that end
+						in '.conf' will be loaded as a configuration file. It
+						is best to have this as the last option in the main
+						file. This option will only be processed from the main
+						configuration file. The directory specified must not
+						contain the main configuration file.</para>
+				</listitem>
+			</varlistentry>
+			<varlistentry>
 				<term><option>listener</option> <replaceable>port</replaceable></term>
 				<listitem>
 					<para>Listen for incoming network connection on the
